changed button path

--- a/Home.html
+++ b/Home.html
@@ -41,7 +41,7 @@
       <div class="second-nav">
 
         <div class="panel-ops">
-          <button onclick="window.open('Flowers.html', '_blank')" class="ptag border">Flowers</button>
+          <button onclick="window.open('../Individual-pages/Flowers.html', '_blank')" class="ptag border">Flowers</button>
           <button onclick="window.open('Cakes.html', '_blank')" class="ptag border">Cakes</button> 
           <button onclick="window.open('Combos.html', '_blank')" class="ptag border">Combos</button>
           <button onclick="window.open('Birthday.html', '_blank')" class="ptag border">Birthday</button>
