Linking individual-pages & footer elements to Home.html

--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href=".../CSS/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -42,13 +42,13 @@
 
         <div class="panel-ops">
           <button onclick="window.open('Individual-pages/Flowers.html', '_blank')" class="ptag border">Flowers</button>
-          <button onclick="window.open('Cakes.html', '_blank')" class="ptag border">Cakes</button> 
-          <button onclick="window.open('Combos.html', '_blank')" class="ptag border">Combos</button>
-          <button onclick="window.open('Birthday.html', '_blank')" class="ptag border">Birthday</button>
-          <button onclick="window.open('Anniversary.html', '_blank')" class="ptag border">Anniversary</button>
-          <button onclick="window.open('Gift.html', '_blank')" class="ptag border">Gift</button>
-          <button onclick="window.open('Plants.html', '_blank')" class="ptag border">Plants</button>
-          <button onclick="window.open('Ontrend.html', '_blank')" class="ptag border">On Trend</button>
+          <button onclick="window.open('Individual-pages/Cakes.html', '_blank')" class="ptag border">Cakes</button> 
+          <button onclick="window.open('Individual-pages/Combos.html', '_blank')" class="ptag border">Combos</button>
+          <button onclick="window.open('Individual-pages/Birthday.html', '_blank')" class="ptag border">Birthday</button>
+          <button onclick="window.open('Individual-pages/Anniversary.html', '_blank')" class="ptag border">Anniversary</button>
+          <button onclick="window.open('Individual-pages/Gift.html', '_blank')" class="ptag border">Gift</button>
+          <button onclick="window.open('Individual-pages/Plants.html', '_blank')" class="ptag border">Plants</button>
+          <button onclick="window.open('Individual-pages/Ontrend.html', '_blank')" class="ptag border">On Trend</button>
         </div> 
 
 
@@ -388,8 +388,8 @@
 
         <ul>
           <p>Need Help?</p>
-          <a href="faq.html" target="_blank">FAQs</a>
-          <a href="contact.html" target="_blank">Contact Us</a>
+          <a href="Footer/faq.html" target="_blank">FAQs</a>
+          <a href="Footer/contact.html" target="_blank">Contact Us</a>
           <a>Sell with us</a>
          </ul>
 
