updated Individual-pages redirection and linked style.css

--- a/Footer/faq.html
+++ b/Footer/faq.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="..CSS/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -45,34 +45,15 @@
       </div>
       <div class="second-nav">
         <div class="panel-ops">
-          <button onclick="location.href='Flowers.html'" class="ptag border">
-            Flowers
-          </button>
-          <button onclick="location.href='Cakes.html'" class="ptag border">
-            Cakes
-          </button>
-          <button onclick="location.href='Combos.html'" class="ptag border">
-            Combos
-          </button>
-          <button onclick="location.href='Birthday.html'" class="ptag border">
-            Birthday
-          </button>
-          <button
-            onclick="location.href='Anniversary.html'"
-            class="ptag border"
-          >
-            Anniversary
-          </button>
-          <button onclick="location.href='Gift.html'" class="ptag border">
-            Gift
-          </button>
-          <button onclick="location.href='Plants.html'" class="ptag border">
-            Plants
-          </button>
-          <button onclick="location.href='Ontrend.html'" class="ptag border">
-            On Trend
-          </button>
-        </div>
+          <button onclick="location.href='Flowers.html'" class="ptag border">Flowers</button>
+          <button onclick="location.href='Cakes.html'" class="ptag border">Cakes</button> 
+          <button onclick="location.href='Combos.html'" class="ptag border">Combos</button>
+          <button onclick="location.href='Birthday.html'" class="ptag border">Birthday</button>
+          <button onclick="location.href='Anniversary.html'" class="ptag border">Anniversary</button>
+          <button onclick="location.href='Gift.html'" class="ptag border">Gift</button>
+          <button onclick="location.href='Plants.html'" class="ptag border">Plants</button>
+          <button onclick="location.href='Ontrend.html'" class="ptag border">On Trend</button>
+        </div> 
       </div>
 
       <div class="faq">
