--- a/Individual-pages/Anniversary.html
+++ b/Individual-pages/Anniversary.html
@@ -306,8 +306,8 @@
 
         <ul>
           <p>Need Help?</p>
-          <a href="faq.html" target="_blank">FAQs</a>
-          <a href="contact.html" target="_blank">Contact Us</a>
+          <a href="../Footer/faq.html" target="_blank">FAQs</a>
+          <a href="../Footer/contact.html" target="_blank">Contact Us</a>
           <a>Sell with us</a>
          </ul>
 
