Fixed link redirection 'Back to Home'

--- a/Individual-pages/Anniversary.html
+++ b/Individual-pages/Anniversary.html
@@ -281,7 +281,7 @@
 
     <footer>
       <div class="firstpanel">
-        <a href="Home.html">
+        <a href="../Home.html">
             Back to Home
         </a>
       </div>
