--- a/Individual-pages/Cakes.html
+++ b/Individual-pages/Cakes.html
@@ -279,7 +279,7 @@
 
     <footer>
       <div class="firstpanel">
-        <a href="Home.html">
+        <a href="../Home.html">
             Back to Home    
         </a>
       </div>
@@ -304,8 +304,8 @@
 
         <ul>
           <p>Need Help?</p>
-          <a href="faq.html" target="_blank">FAQs</a>
-          <a href="contact.html" target="_blank">Contact Us</a>
+          <a href="../Footer/faq.html" target="_blank">FAQs</a>
+          <a href="../Footer/contact.html" target="_blank">Contact Us</a>
           <a>Sell with us</a>
          </ul>
 
