fixed redirection of button back to Individual-pages

--- a/Footer/faq.html
+++ b/Footer/faq.html
@@ -45,14 +45,14 @@
       </div>
       <div class="second-nav">
         <div class="panel-ops">
-          <button onclick="location.href='Flowers.html'" class="ptag border">Flowers</button>
-          <button onclick="location.href='Cakes.html'" class="ptag border">Cakes</button> 
-          <button onclick="location.href='Combos.html'" class="ptag border">Combos</button>
-          <button onclick="location.href='Birthday.html'" class="ptag border">Birthday</button>
-          <button onclick="location.href='Anniversary.html'" class="ptag border">Anniversary</button>
-          <button onclick="location.href='Gift.html'" class="ptag border">Gift</button>
-          <button onclick="location.href='Plants.html'" class="ptag border">Plants</button>
-          <button onclick="location.href='Ontrend.html'" class="ptag border">On Trend</button>
+          <button onclick="location.href='../Individual-pages/Flowers.html'" class="ptag border">Flowers</button>
+          <button onclick="location.href='../Individual-pages/Cakes.html'" class="ptag border">Cakes</button> 
+          <button onclick="location.href='../Individual-pages/Combos.html'" class="ptag border">Combos</button>
+          <button onclick="location.href='../Individual-pages/Birthday.html'" class="ptag border">Birthday</button>
+          <button onclick="location.href='../Individual-pages/Anniversary.html'" class="ptag border">Anniversary</button>
+          <button onclick="location.href='../Individual-pages/Gift.html'" class="ptag border">Gift</button>
+          <button onclick="location.href='../Individual-pages/Plants.html'" class="ptag border">Plants</button>
+          <button onclick="location.href='../Individual-pages/Ontrend.html'" class="ptag border">On Trend</button>
         </div> 
       </div>
 
