fixed button issue

--- a/Individual-pages/Plants.html
+++ b/Individual-pages/Plants.html
@@ -102,77 +102,77 @@
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/e7/0d/2e/e70d2e82bf3b4ad16f3a35dba6399879.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/f5/fe/d4/f5fed44dbded526bc4e93c1aa502c602.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/d7/8b/08/d78b0841d9db86ac5be8d7c102cd8aa6.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/c9/d8/49/c9d8498188682e121e02396ee605a674.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/f0/69/c8/f069c836dcd4aa5c5637534b89a424e9.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/9a/06/54/9a0654b6daf21b2a78cabe99685425ee.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/f0/70/30/f0703038b0240840973e872eb9e8e2f0.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/0a/d0/23/0ad023e5ef84d5dde81ec5f66d389987.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/89/1d/d7/891dd78302069f58bbe3cdf5cb619a02.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/56/4c/2f/564c2f8334d82229c48e66aff468b109.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/86/ee/cf/86eecf62e1db5c3d841d6d59fd848379.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/f0/b8/71/f0b871196f53c9f35c1a882b3105b3d6.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/84/f1/16/84f11649c48591d33bcdf25ebc7ec64a.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/ef/5f/44/ef5f443d9b1f2d1175715fc602287b81.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
         <div class="item">
             <img src="https://i.pinimg.com/736x/e2/ff/f1/e2fff1fada6fd0d2fb06fc7d41b14984.jpg">
-            <butto>₹629</button>
+            <button>₹629</button>
         </div>
 
     </header>
